--- a/SoDutch/Base.lproj/Main.storyboard
+++ b/SoDutch/Base.lproj/Main.storyboard
@@ -175,17 +175,6 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="101" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xXn-MD-oIA">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <segmentedControl key="tableFooterView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="Vqh-Q4-bKx">
-                                    <rect key="frame" x="0.0" y="192" width="600" height="30"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <segments>
-                                        <segment title="List View"/>
-                                        <segment title="Swipe View"/>
-                                    </segments>
-                                    <connections>
-                                        <action selector="listViewSegment:" destination="Ywu-cB-07l" eventType="valueChanged" id="hTL-ae-1nM"/>
-                                    </connections>
-                                </segmentedControl>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ItemCell" rowHeight="100" id="hBf-W9-bJS" customClass="ItemCell" customModule="SoDutch" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="92" width="600" height="100"/>
@@ -307,7 +296,7 @@
                                 </connections>
                             </segmentedControl>
                             <view alpha="0.90000000000000002" contentMode="scaleToFill" restorationIdentifier="AnnotatioDetailView" translatesAutoresizingMaskIntoConstraints="NO" id="JUp-FY-5jt">
-                                <rect key="frame" x="0.0" y="348" width="600" height="200"/>
+                                <rect key="frame" x="0.0" y="351" width="600" height="200"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="752" translatesAutoresizingMaskIntoConstraints="NO" id="0h4-K1-REj">
                                         <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
@@ -364,12 +353,6 @@
                                             <action selector="getRouteToItem:" destination="jUL-JO-IGX" eventType="touchUpInside" id="rtx-0k-ju9"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="djX-OS-adq">
-                                        <rect key="frame" x="208" y="133" width="42" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -389,14 +372,9 @@
                                     <constraint firstItem="yEd-tf-IFX" firstAttribute="top" secondItem="JUp-FY-5jt" secondAttribute="top" constant="8" id="xQq-7V-XN3"/>
                                     <constraint firstAttribute="height" constant="200" id="zjE-uT-6xV"/>
                                 </constraints>
-                                <variation key="default">
-                                    <mask key="subviews">
-                                        <exclude reference="djX-OS-adq"/>
-                                    </mask>
-                                </variation>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="DoneButton" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="azq-5D-gCy">
-                                <rect key="frame" x="520" y="32" width="40" height="40"/>
+                                <rect key="frame" x="540" y="32" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="Cmj-Mw-nVq"/>
                                     <constraint firstAttribute="height" constant="40" id="U9W-oD-0em"/>
@@ -422,11 +400,11 @@
                             <constraint firstAttribute="trailingMargin" secondItem="Wwd-8w-yHc" secondAttribute="trailing" constant="-20" id="5n4-si-nCp"/>
                             <constraint firstItem="rWY-PW-NwI" firstAttribute="top" secondItem="Uu2-Q0-3yp" secondAttribute="bottom" constant="12" id="72A-dH-awN"/>
                             <constraint firstItem="UYU-y9-chf" firstAttribute="top" secondItem="Uu2-Q0-3yp" secondAttribute="bottom" constant="10" id="7eP-DR-2bm"/>
-                            <constraint firstItem="Azc-09-ZcL" firstAttribute="top" secondItem="JUp-FY-5jt" secondAttribute="bottom" constant="3" id="7ln-j8-Zlu"/>
+                            <constraint firstItem="Azc-09-ZcL" firstAttribute="top" secondItem="JUp-FY-5jt" secondAttribute="bottom" id="7ln-j8-Zlu"/>
                             <constraint firstItem="rWY-PW-NwI" firstAttribute="centerX" secondItem="LGi-YO-u4a" secondAttribute="centerX" id="8d3-O2-Exg"/>
                             <constraint firstItem="JUp-FY-5jt" firstAttribute="trailing" secondItem="Wwd-8w-yHc" secondAttribute="trailing" id="9Rp-Ql-Ohg"/>
                             <constraint firstItem="Wwd-8w-yHc" firstAttribute="leading" secondItem="LGi-YO-u4a" secondAttribute="leadingMargin" constant="-20" id="F77-eX-bC8"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="azq-5D-gCy" secondAttribute="trailing" constant="20" id="Iwc-s3-izq"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="azq-5D-gCy" secondAttribute="trailing" id="Iwc-s3-izq"/>
                             <constraint firstItem="JUp-FY-5jt" firstAttribute="leading" secondItem="Wwd-8w-yHc" secondAttribute="leading" id="KXr-ze-40X"/>
                             <constraint firstItem="Azc-09-ZcL" firstAttribute="top" secondItem="Wwd-8w-yHc" secondAttribute="bottom" id="Xpb-1a-oy2"/>
                             <constraint firstItem="Wwd-8w-yHc" firstAttribute="top" secondItem="LGi-YO-u4a" secondAttribute="topMargin" id="cx8-f9-jza"/>
@@ -437,7 +415,6 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Map" image="Map icon" id="LZT-a3-M5T"/>
                     <connections>
-                        <outlet property="adressLabel" destination="djX-OS-adq" id="7hU-Bu-3Td"/>
                         <outlet property="annotationDetailView" destination="JUp-FY-5jt" id="TEg-sC-Tad"/>
                         <outlet property="descriptionLabel" destination="9vN-aZ-P6c" id="wC9-0E-zrS"/>
                         <outlet property="imageView" destination="0h4-K1-REj" id="6v3-F5-wOE"/>
@@ -511,39 +488,23 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="JSb-V5-4zl">
-                                <rect key="frame" x="183" y="72" width="234" height="30"/>
-                                <segments>
-                                    <segment title="List View"/>
-                                    <segment title="Swipe View"/>
-                                </segments>
-                                <connections>
-                                    <action selector="listViewSegment:" destination="xyO-Oj-zpu" eventType="valueChanged" id="G0E-xY-Vs8"/>
-                                    <action selector="listViewSegment:" destination="Ywu-cB-07l" eventType="valueChanged" id="LTW-w7-Cs6"/>
-                                </connections>
-                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="tbe-M7-ALO" secondAttribute="trailing" constant="-20" id="8Gk-zK-sju"/>
                             <constraint firstItem="JuF-f2-dqk" firstAttribute="top" secondItem="aK7-Uy-Zoz" secondAttribute="bottom" constant="93" id="KlZ-xC-uWI"/>
                             <constraint firstItem="JuF-f2-dqk" firstAttribute="top" secondItem="tbe-M7-ALO" secondAttribute="bottom" constant="62" id="McH-a9-5q4"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="JSb-V5-4zl" secondAttribute="trailing" constant="163" id="NQA-7I-eC6"/>
                             <constraint firstItem="aK7-Uy-Zoz" firstAttribute="leading" secondItem="SgY-bh-beS" secondAttribute="leadingMargin" constant="-20" id="NaT-zY-j4c"/>
                             <constraint firstItem="aK7-Uy-Zoz" firstAttribute="top" secondItem="ybd-x5-hei" secondAttribute="bottom" constant="359" id="QzK-rK-0cb"/>
                             <constraint firstItem="tbe-M7-ALO" firstAttribute="top" secondItem="ybd-x5-hei" secondAttribute="bottom" constant="29" id="RHc-80-yrP"/>
                             <constraint firstAttribute="trailingMargin" secondItem="aK7-Uy-Zoz" secondAttribute="trailing" constant="-20" id="RV6-gO-4PI"/>
-                            <constraint firstItem="JSb-V5-4zl" firstAttribute="leading" secondItem="SgY-bh-beS" secondAttribute="leadingMargin" constant="163" id="TME-sM-Xpq"/>
                             <constraint firstItem="tbe-M7-ALO" firstAttribute="leading" secondItem="SgY-bh-beS" secondAttribute="leadingMargin" constant="-20" id="TkI-n3-2bI"/>
-                            <constraint firstItem="JSb-V5-4zl" firstAttribute="top" secondItem="ybd-x5-hei" secondAttribute="bottom" constant="8" id="hAA-cg-K5j"/>
-                            <constraint firstItem="JSb-V5-4zl" firstAttribute="centerX" secondItem="SgY-bh-beS" secondAttribute="centerX" id="hrd-y6-FgG"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="descriptionLabel" destination="d9D-1q-Yun" id="G5M-ya-gR4"/>
                         <outlet property="imageView" destination="tbe-M7-ALO" id="nEl-JD-1cQ"/>
                         <outlet property="infoLabel" destination="LVn-Fs-sFI" id="hwB-nI-a9G"/>
-                        <outlet property="listViewSegment" destination="JSb-V5-4zl" id="Ghe-m0-oul"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EBD-W0-Ag4" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -660,6 +621,18 @@
                                     </mask>
                                 </variation>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1tD-Mh-7a5">
+                                <rect key="frame" x="87" y="445" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Date:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bAX-ch-m1c">
+                                <rect key="frame" x="20" y="445" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -670,6 +643,7 @@
                             <constraint firstItem="1Y5-Be-Xom" firstAttribute="top" secondItem="kll-78-YjX" secondAttribute="bottom" constant="14" id="8lj-A7-6DT"/>
                             <constraint firstItem="gK6-4e-3KM" firstAttribute="leading" secondItem="lQm-2z-mjj" secondAttribute="trailing" constant="20" id="9jD-Zx-9n5"/>
                             <constraint firstItem="M6v-dF-9MT" firstAttribute="leading" secondItem="7t6-BT-u6l" secondAttribute="leadingMargin" constant="-20" id="AMw-r5-Y7t"/>
+                            <constraint firstItem="1tD-Mh-7a5" firstAttribute="leading" secondItem="bAX-ch-m1c" secondAttribute="trailing" constant="25" id="H5H-YW-iOI"/>
                             <constraint firstAttribute="trailingMargin" secondItem="R6A-k2-z9O" secondAttribute="trailing" constant="-20" id="LOW-qo-ksi"/>
                             <constraint firstItem="gK6-4e-3KM" firstAttribute="centerY" secondItem="lQm-2z-mjj" secondAttribute="centerY" id="Lfa-Kt-7EA"/>
                             <constraint firstItem="TI4-kn-mIv" firstAttribute="leading" secondItem="7t6-BT-u6l" secondAttribute="leadingMargin" id="NcT-uu-JS0"/>
@@ -678,11 +652,13 @@
                             <constraint firstItem="TI4-kn-mIv" firstAttribute="top" secondItem="M6v-dF-9MT" secondAttribute="bottom" constant="18" id="S28-AH-HaQ"/>
                             <constraint firstItem="TI4-kn-mIv" firstAttribute="leading" secondItem="7t6-BT-u6l" secondAttribute="leadingMargin" id="SNw-Qx-gwP"/>
                             <constraint firstItem="M6v-dF-9MT" firstAttribute="bottom" secondItem="R6A-k2-z9O" secondAttribute="bottom" id="TRM-D4-L9D"/>
+                            <constraint firstItem="bAX-ch-m1c" firstAttribute="top" secondItem="lQm-2z-mjj" secondAttribute="bottom" constant="9" id="TfB-8B-2Eb"/>
                             <constraint firstItem="OFy-vk-flr" firstAttribute="top" secondItem="TI4-kn-mIv" secondAttribute="bottom" constant="5" id="UB8-sP-jSU"/>
                             <constraint firstItem="ozb-FH-Efb" firstAttribute="top" secondItem="7t6-BT-u6l" secondAttribute="topMargin" constant="20" id="UL2-qD-Dof"/>
                             <constraint firstItem="1Y5-Be-Xom" firstAttribute="bottom" secondItem="S9C-F9-AY7" secondAttribute="bottom" id="WtC-Ie-amy"/>
                             <constraint firstItem="lQm-2z-mjj" firstAttribute="top" secondItem="TI4-kn-mIv" secondAttribute="bottom" constant="18" id="Y1Y-A5-bfw"/>
                             <constraint firstItem="IoV-ug-8Ev" firstAttribute="bottom" secondItem="M6v-dF-9MT" secondAttribute="bottom" id="ZEM-Z0-pC3"/>
+                            <constraint firstItem="1tD-Mh-7a5" firstAttribute="top" secondItem="gK6-4e-3KM" secondAttribute="bottom" constant="9" id="Zuy-6l-mm0"/>
                             <constraint firstAttribute="trailingMargin" secondItem="M6v-dF-9MT" secondAttribute="trailing" constant="-20" id="aKS-c4-vIr"/>
                             <constraint firstItem="R6A-k2-z9O" firstAttribute="baseline" secondItem="M6v-dF-9MT" secondAttribute="baseline" id="cfF-y7-kQF"/>
                             <constraint firstItem="TI4-kn-mIv" firstAttribute="top" secondItem="R6A-k2-z9O" secondAttribute="bottom" constant="18" id="f5S-U9-mGu"/>
@@ -691,6 +667,7 @@
                             <constraint firstItem="ozb-FH-Efb" firstAttribute="leading" secondItem="7t6-BT-u6l" secondAttribute="leadingMargin" constant="-20" id="iZ0-Ut-zIn"/>
                             <constraint firstItem="R6A-k2-z9O" firstAttribute="baseline" secondItem="M6v-dF-9MT" secondAttribute="baseline" id="ia9-JZ-mB1"/>
                             <constraint firstItem="1Y5-Be-Xom" firstAttribute="leading" secondItem="S9C-F9-AY7" secondAttribute="trailing" constant="13" id="jxe-Rv-edM"/>
+                            <constraint firstItem="bAX-ch-m1c" firstAttribute="leading" secondItem="7t6-BT-u6l" secondAttribute="leadingMargin" id="kjv-7n-309"/>
                             <constraint firstItem="M6v-dF-9MT" firstAttribute="leading" secondItem="R6A-k2-z9O" secondAttribute="leading" id="nYw-Tz-0Sa"/>
                             <constraint firstItem="TI4-kn-mIv" firstAttribute="trailing" secondItem="7t6-BT-u6l" secondAttribute="trailingMargin" id="pRF-fo-MJv"/>
                             <constraint firstItem="M6v-dF-9MT" firstAttribute="top" secondItem="ozb-FH-Efb" secondAttribute="bottom" id="rUO-bg-YSk"/>
@@ -714,6 +691,7 @@
                     </view>
                     <connections>
                         <outlet property="adressLabel" destination="gK6-4e-3KM" id="M1o-25-Q8a"/>
+                        <outlet property="dateLabel" destination="1tD-Mh-7a5" id="iEA-Ia-xxa"/>
                         <outlet property="descriptionLabel" destination="TI4-kn-mIv" id="KWp-WE-QUF"/>
                         <outlet property="imageView" destination="M6v-dF-9MT" id="QH4-uf-RR4"/>
                         <outlet property="likeButton" destination="S9C-F9-AY7" id="3hm-zG-mwa"/>
