--- a/SoDutch/Base.lproj/Main.storyboard
+++ b/SoDutch/Base.lproj/Main.storyboard
@@ -175,7 +175,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="101" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xXn-MD-oIA">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="101" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xXn-MD-oIA">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -241,7 +241,7 @@
                             <constraint firstItem="xXn-MD-oIA" firstAttribute="leading" secondItem="ZTS-5s-P47" secondAttribute="leadingMargin" constant="-20" id="758-sp-VPu"/>
                             <constraint firstAttribute="trailingMargin" secondItem="xXn-MD-oIA" secondAttribute="trailing" constant="-20" id="8a0-ko-Rsu"/>
                             <constraint firstItem="xXn-MD-oIA" firstAttribute="top" secondItem="ZTS-5s-P47" secondAttribute="topMargin" id="YSU-to-lcF"/>
-                            <constraint firstItem="qFf-zc-I0b" firstAttribute="top" secondItem="xXn-MD-oIA" secondAttribute="bottom" id="g6b-IF-qhn"/>
+                            <constraint firstItem="qFf-zc-I0b" firstAttribute="top" secondItem="xXn-MD-oIA" secondAttribute="bottom" constant="49" id="g6b-IF-qhn"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="SoDutch List" id="jPm-N4-WKS"/>
@@ -585,10 +585,9 @@
                                 <constraints>
                                     <constraint firstAttribute="width" constant="26" id="c2W-gh-hp2"/>
                                 </constraints>
-                                <state key="normal" image="map pin"/>
+                                <state key="normal" image="Location"/>
                                 <connections>
-                                    <action selector="TapLabel:" destination="rSw-Wn-MJG" eventType="touchUpInside" id="aj7-UJ-j2i"/>
-                                    <action selector="tapLabel:" destination="rSw-Wn-MJG" eventType="touchUpInside" id="5Sa-Fk-99x"/>
+                                    <action selector="goToMap:" destination="rSw-Wn-MJG" eventType="touchUpInside" id="hLX-DN-zl3"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lQm-2z-mjj">
@@ -795,9 +794,9 @@
     <resources>
         <image name="Camera icon" width="37" height="28"/>
         <image name="List icon" width="27" height="28"/>
+        <image name="Location" width="18" height="27"/>
         <image name="Map icon" width="37" height="28"/>
         <image name="currentLocationButton" width="40" height="40"/>
         <image name="heart" width="38" height="34"/>
-        <image name="map pin" width="41" height="52"/>
     </resources>
 </document>
